# MaroRenderer

./: .clang_complete  .gitignore  CMakeLists.txt  MaroRenderer.sln  README.md  compile_commands.json
MaroRenderer/: CMakeLists.txt  MaroRenderer.vcxproj  MaroRenderer.vcxproj.filters  cube.fbx  glad.c  imgui.ini
MaroRenderer/.mayaSwatches/: Box_Texture.png_hcm.swatch
MaroRenderer/Application/: Application.cpp  Application.h  Gizmo.cpp  Gizmo.h  ObjectPicker.cpp  ObjectPicker.h  Window.cpp  Window.h  main.cpp
MaroRenderer/Application/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
MaroRenderer/Application/File/: FileHandler.h
MaroRenderer/Application/GUI/: GUILayer.cpp  GUILayer.h
MaroRenderer/Engine/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
MaroRenderer/Engine/Camera/: ArcballCamera.cpp  ArcballCamera.h  Camera.h  PerspectiveCamera.h
MaroRenderer/Engine/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
MaroRenderer/Engine/Objects/: Actor.h  CubeMesh.cpp  CubeMesh.h  Cubemap.cpp  Cubemap.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Skybox.cpp  Skybox.h
MaroRenderer/Engine/Rendering/: Framebuffer.cpp  Framebuffer.h  Renderbuffer.cpp  Renderbuffer.h  Renderer.h  Shader.cpp
MaroRenderer/Engine/Shaders/: basic2d.fs  basic2d.vs  brdf.fs  brdf.vs  color.fs  cubemap.fs  cubemap.vs  equi_to_cubemap.fs  irradiance.fs  normal_mapping.fs  pbr.fs  pbr.vs  pbr_2.fs  pbr_2.vs  prefilter.fs
MaroRenderer/Logging/: Logger.h
MaroRenderer/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
MaroRenderer/Renderer/Camera/: ArcballCamera.cpp  ArcballCamera.h  Camera.cpp  Camera.h  PerspectiveCamera.cpp
MaroRenderer/Renderer/Objects/: Light.h
MaroRenderer/Renderer/Shaders/: basic2d.fs  basic2d.vs
MaroRenderer/include/assimp/lib/: assimp-vc142-mtd.exp
MaroRenderer/include/glad/: Makefile  cmake_install.cmake  glad.h
MaroRenderer/include/glad/include/glad/: glad.h
MaroRenderer/include/glad/src/: glad.c
